--- a/server/package.json
+++ b/server/package.json
@@ -1,11 +1,14 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "",
+  "description": "chat app sever",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "start": "node index.js"
+
+
+    
   },
   "keywords": [],
   "author": "",
@@ -14,6 +17,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "nodemon": "^2.0.16",
+    "serve": "^13.0.2",
     "socket.io": "^4.5.0"
   }
 }
